Add support for rebar3

--- a/rebar.config
+++ b/rebar.config
@@ -38,3 +38,11 @@
     {"win32", "CFLAGS", "/Wall /DWIN32 /D_WINDOWS /D_WIN32 /DWINDOWS"},
     {"win32", "CXXFLAGS", "-g -Wall -O3"}
 ]}.
+
+{plugins, [pc]}.
+{provider_hooks, [
+    {pre, [
+        {compile, {pc, compile}},
+        {clean, {pc, clean}}
+    ]}
+]}.
